--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "parse-glob": "^3.0.4",
     "path": "^0.12.7",
     "rxjs": "^5.5.2",
-    "zone.js": "^0.8.18"
+    "zone.js": "^0.8.18",
+    "handlebars": "^4.0.11"
   },
   "devDependencies": {
     "@angular/cli": "^1.5.2",
