--- a/package.json
+++ b/package.json
@@ -25,15 +25,16 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.1",
     "express": "^4.16.2",
+    "handlebars": "^4.0.11",
     "http": "0.0.0",
     "mongoose": "^4.13.4",
     "multer": "^1.3.0",
     "ngx-quill-editor": "^2.2.2",
+    "node-yelp-fusion": "^1.0.4",
     "parse-glob": "^3.0.4",
     "path": "^0.12.7",
     "rxjs": "^5.5.2",
-    "zone.js": "^0.8.18",
-    "handlebars": "^4.0.11"
+    "zone.js": "^0.8.18"
   },
   "devDependencies": {
     "@angular/cli": "^1.5.2",
