--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "@angular/platform-browser": "^4.4.6",
     "@angular/platform-browser-dynamic": "^4.4.6",
     "@angular/router": "^4.4.6",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.5.1",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "handlebars": "^4.0.11",
     "http": "0.0.0",
     "mongoose": "^4.13.4",
@@ -32,6 +35,9 @@
     "ngx-quill-editor": "^2.2.2",
     "node-yelp-fusion": "^1.0.4",
     "parse-glob": "^3.0.4",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.18"
