--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "^4.4.6",
     "@angular/platform-browser-dynamic": "^4.4.6",
     "@angular/router": "^4.4.6",
+    "@ngui/map": "^0.20.0",
+    "@types/googlemaps": "^3.30.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
@@ -32,6 +34,7 @@
     "http": "0.0.0",
     "mongoose": "^4.13.4",
     "multer": "^1.3.0",
+    "ng2-carouselamos": "^3.2.0",
     "ng2-rating": "0.0.7",
     "ngx-quill-editor": "^2.2.2",
     "node-yelp-fusion": "^1.0.4",
