--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "multer": "^1.3.0",
     "ng2-carouselamos": "^3.2.0",
     "ng2-rating": "0.0.7",
+    "ngx-loading": "^1.0.9",
     "ngx-quill-editor": "^2.2.2",
     "node-yelp-fusion": "^1.0.4",
     "parse-glob": "^3.0.4",
